--- a/MIRNet_TFLite.ipynb
+++ b/MIRNet_TFLite.ipynb
@@ -31,7 +31,7 @@
         "id": "oDZZ4i_JELjH"
       },
       "source": [
-        "This notebook shows the TensorFlow Lite model conversion and inference processes for the **MIRNet** model as proposed by [Learning Enriched Features for Real Image Restoration and Enhancement](https://arxiv.org/pdf/2003.06792v2.pdf). This model is capable of enhancing low-light images upto a great extent. \n",
+        "This notebook shows the TensorFlow Lite model conversion and inference processes for the **MIRNet** model as proposed by [Learning Enriched Features for Real Image Restoration and Enhancement](https://arxiv.org/pdf/2003.06792v2.pdf). This model is capable of enhancing low-light images to a great extent. \n",
         "\n",
         "<p align=\"center\">\n",
         "<img src=\"https://github.com/soumik12345/MIRNet/raw/master/assets/lol_results.gif\"</img><br>\n",
@@ -63,7 +63,7 @@
         "!git clone https://github.com/soumik12345/MIRNet\n",
         "%cd MIRNet"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
       "source": [
         "!pip install -q wandb"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "import numpy as np\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
       "source": [
         "download_dataset('LOL')"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
         ")\n",
         "inferer.model.summary()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3540,7 +3540,7 @@
         "        preprocessed_image = np.expand_dims(preprocessed_image, axis=0)\n",
         "        yield [preprocessed_image]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3567,7 +3567,7 @@
         "    open(filename, 'wb').write(tflite_model)\n",
         "    print('Model size is %f MBs.' % (len(tflite_model) / 1024 / 1024.0))"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3591,7 +3591,7 @@
       "source": [
         "convert_tflite(model=inferer.model, quant='dr', filename='mirnet_dr.tflite')"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3621,7 +3621,7 @@
       "source": [
         "convert_tflite(model=inferer.model, quant='fp16', filename='mirnet_fp16.tflite')"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3658,7 +3658,7 @@
       "source": [
         "convert_tflite(model=inferer.model, quant='int8', filename='mirnet_int8.tflite')"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3698,7 +3698,7 @@
         "!ls -lh *.h5\n",
         "!ls -lh *.tflite"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3744,7 +3744,7 @@
         "    \"int8\": \"mirnet_int8.tflite\"\n",
         "}"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3768,7 +3768,7 @@
         "    \n",
         "    return original_image, preprocessed_image"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3797,7 +3797,7 @@
         "    output_image = Image.fromarray(np.uint8(output_image))\n",
         "    return output_image"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3828,7 +3828,7 @@
         "    output_image = infer_tflite(model_type, preprocessed_image)\n",
         "    plot_result(Image.fromarray(np.uint8(original_image)), output_image)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3900,6 +3900,15 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "REZj355CoMCD"
+      },
+      "source": [
+        "TensorFlow Lite models are NOT optimized for Colab runtime so you would see latency during performing inference. "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "GpHe-g8jNfP-"
       },
       "source": [
@@ -3921,7 +3930,7 @@
         "    original_image, output_image = inferer.infer(image_path)\n",
         "    plot_result(original_image, output_image)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
