Fixed shape notebook reference

--- a/MIRNet_TFLite.ipynb
+++ b/MIRNet_TFLite.ipynb
@@ -3576,7 +3576,7 @@
         "id": "XIW7thciNo1n"
       },
       "source": [
-        "Here we are allowing the TensorFlow Lite model to handle dynamic shapes. If that is not desirable (GPU delegate does not support dynamic shapes yet) then follow [this notebook](TODO: update link). "
+        "Here we are allowing the TensorFlow Lite model to handle dynamic shapes. If that is not desirable (GPU delegate does not support dynamic shapes yet) then follow [this notebook](https://colab.research.google.com/github/sayakpaul/MIRNet-TFLite/blob/main/MIRNet_TFLite_Fixed_Shape.ipynb). "
       ]
     },
     {
