--- a/MIRNet_TFLite_Fixed_Shape.ipynb
+++ b/MIRNet_TFLite_Fixed_Shape.ipynb
@@ -63,7 +63,7 @@
         "!git clone https://github.com/soumik12345/MIRNet\n",
         "%cd MIRNet"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,7 +86,7 @@
       "source": [
         "!pip install -q wandb"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "import numpy as np\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,7 +157,7 @@
       "source": [
         "download_dataset('LOL')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -204,7 +204,7 @@
         ")\n",
         "inferer.model.summary()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3511,7 +3511,7 @@
         "# Save model in SavedModel format\n",
         "inferer.model.save('mirnet')"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3570,7 +3570,7 @@
         "        preprocessed_image = np.expand_dims(preprocessed_image, axis=0)\n",
         "        yield [preprocessed_image]"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3594,6 +3594,7 @@
         "    elif quant=='int8':\n",
         "        converter.optimizations = [tf.lite.Optimize.DEFAULT]\n",
         "        converter.representative_dataset = representative_dataset_gen\n",
+        "        # The following is only supported via tf-nightly as of December 06, 2020\n",
         "        # converter.target_spec.supported_ops = [tf.lite.OpsSet.TFLITE_BUILTINS_INT8]\n",
         "        # converter.inference_input_type = tf.uint8\n",
         "        # converter.inference_output_type = tf.uint8\n",
@@ -3602,7 +3603,7 @@
         "    open(filename, 'wb').write(tflite_model)\n",
         "    print('Model size is %f MBs.' % (len(tflite_model) / 1024 / 1024.0))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3626,7 +3627,7 @@
       "source": [
         "convert_tflite(saved_model='mirnet', quant='dr', filename='mirnet_dr.tflite')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3649,7 +3650,7 @@
       "source": [
         "convert_tflite(saved_model='mirnet', quant='fp16', filename='mirnet_fp16.tflite')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3672,7 +3673,7 @@
       "source": [
         "convert_tflite(saved_model='mirnet', quant='int8', filename='mirnet_int8.tflite')"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3696,7 +3697,7 @@
         "!ls -lh *.h5\n",
         "!ls -lh *.tflite"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3742,7 +3743,7 @@
         "    \"int8\": \"mirnet_int8.tflite\"\n",
         "}"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3766,7 +3767,7 @@
         "    \n",
         "    return original_image, preprocessed_image"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3794,7 +3795,7 @@
         "    output_image = Image.fromarray(np.uint8(output_image))\n",
         "    return output_image"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3825,7 +3826,7 @@
         "    output_image = infer_tflite(model_type, preprocessed_image)\n",
         "    plot_result(Image.fromarray(np.uint8(original_image)), output_image)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3927,7 +3928,7 @@
         "    original_image, output_image = inferer.infer(image_path)\n",
         "    plot_result(original_image, output_image)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
