Removed cartoonizer mentions

--- a/Add_Metadata.ipynb
+++ b/Add_Metadata.ipynb
@@ -148,7 +148,7 @@
         "    self._populate_metadata()\n",
         "  \n",
         "  def _create_metadata(self):\n",
-        "    \"\"\"Creates the metadata for the CartoonGAN model.\"\"\"\n",
+        "    \"\"\"Creates the metadata for the MIRNet model.\"\"\"\n",
         "\n",
         "    # Creates model info.\n",
         "    model_meta = _metadata_fb.ModelMetadataT()\n",
@@ -187,7 +187,7 @@
         "    input_image_meta.stats = input_image_stats\n",
         "\n",
         "\n",
-        "    # Creates output info, cartoonized image\n",
+        "    # Creates output info, enhanced image\n",
         "    output_image_meta = _metadata_fb.TensorMetadataT()\n",
         "    output_image_meta.name = \"enhanced_image\"\n",
         "    output_image_meta.description = \"Image enhanced.\"\n",
